# matriosha

./: .abacus.donotdelete  .dockerignore  .env.example  .gitignore  ATOMIC_PROMPTS.md  AUDIT_FINAL_v1.2.md  BACKEND_SETUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  INSTALL_PYTHON_3.14.md  LICENSE  PRICING_MODEL_VERIFICATION.md  README.md  README_PYPI.md  REPO_REORG_SUMMARY.md  RULES.md  SECURITY.md  SPEC.md  SPECIFICATION.md  TASKS.md  deployment_guide.md  frontend-structure.txt  mcp_server.py  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  pytest.ini  requirements.txt  security_review.md  tailwind.config.ts  test_updates_summary.md  vercel.json
.agent/: CONTEXT.md
.agent/commands/: p1-p3-core.md
.agent/rules/: security.md  stack.md
.edge-functions-temp/stripe-webhook/: index.ts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy.yml  integration-tests.yml  quality-gates.yml
ARCHIVE/legacy_2026-04-22/: AUDIT_REPORT.md.archived  frontend-structure.txt  package-lock.json  package.json
ARCHIVE/legacy_2026-04-22/.agent/: CONTEXT.md.archived
ARCHIVE/legacy_2026-04-22/docs/: MCP_INTEGRATION.md.archived  business-logic.md.archived
ARCHIVE/legacy_2026-04-22/matriosha.egg-info/: PKG-INFO  requires.txt
ARCHIVE/legacy_2026-04-22/migrations/: 001_create_tables.sql
ARCHIVE/legacy_2026-04-22/scripts/: benchmark.py  benchmark_accuracy.py  (+1 more)
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/security/: page.tsx
benchmarks/: local_miracl_fixture_performance.py  miracl_index_corpus.py  miracl_retrieval_benchmark.py  miracl_self_retrieval_fixtures.py
benchmarks/fixtures/: miracl_self_600_memories.jsonl  miracl_self_600_queries.jsonl  miracl_self_exact_5004_memories.jsonl  miracl_self_exact_5004_queries.jsonl  miracl_self_exact_600_queries.jsonl  miracl_self_middle_5004_queries.jsonl  miracl_self_title_5004_queries.jsonl  miracl_topics_sample.jsonl  retrieval_memories.jsonl  retrieval_queries.jsonl  retrieval_queries_miracl_derived.jsonl
cli/: __init__.py  main.py
cli/brand/: __init__.py
cli/commands/: __init__.py  agent.py  auth.py  billing.py  completion.py  compress.py  doctor.py  export_import.py  init.py  memory.py  mode.py  quota.py  recall.py  remember.py  status.py  sync.py  token.py  vault.py  verify.py
cli/tui/: launcher.py  tokens.py
cli/utils/: __init__.py  config.py  context.py  errors.py  mode_guard.py  output.py
components/: BentoGrid.tsx  StorageTierVisualizer.tsx  VaultIntegrityCard.tsx
components/dashboard/: dashboard-actions.tsx
components/landing/: features-grid.tsx  hero-section.tsx  navigation.tsx  pricing-section.tsx  site-footer.tsx
core/: __init__.py  adapter.py  binary_protocol.py  brain.py  config.py  dependency_installer.py  diagnostics.py  interpreter.py  interpreter_plugins.py  merkle.py  secrets.py  security.py  storage_local.py  vault.py  vectors.py
core/managed/: __init__.py  agents.py  auth.py  backup.py  client.py  key_custody.py  schema.sql  secrets.py  sync.py
docs/: AUDIT_COMPLETE.md  CNAME  DECODER_PLUGINS.md  DEPENDENCIES.md  MANAGED_BOOTSTRAP.md  REPOSITORY_ANALYSIS_AND_REFACTOR_PLAN.md  TEST_EVIDENCE.md  TEST_REPORT.md  agb.html  architecture-dump.md  cancel.html  datenschutz.html  impressum.html  index.html  llms.txt  matriosha.1  robots.txt  sitemap.xml  success.html
docs/adr/: 0001-local-managed-key-lifecycle-boundary.md  0002-cli-json-output-contract.md  0003-hash-chained-audit-events.md  README.md
docs/assets/: matriosha_agent_setup_guide.json
docs/ci/: integration-tests.workflow.yml
docs/integrations/: matriosha_agent_integrations.md
edge-functions/: stripe-webhook.ts
from fastapi import FastAPI import os  app = FastAPI()  @app.get("/: api.py
lib/: supabase.ts
matriosha.egg-info/: SOURCES.txt  entry_points.txt
migrations/: 002_rls_policies.sql
scripts/: generate_tui_screenshots.py  push-secrets.sh  setup_secrets.py  verify_gsm_setup.py  verify_test_evidence.py
src/matriosha/: api.py
supabase/migrations/: 20260502_safe_memory_metadata.sql  20260503_fast_match_memory_candidates.sql  20260503_increment_storage_usage_rpc.sql  20260503_match_memory_candidates_keyword_only.sql  20260503_optimize_managed_candidate_search.sql  20260503_optimize_managed_memory_user_indexes.sql
tests/: conftest.py  test_api_business_rules.py  test_api_search.py  test_audit.py  test_backup_on_corruption.py  test_binary_protocol.py  test_brand.py  test_cli_coverage_batch_01.py  test_cmd_agent.py  test_cmd_audit.py  test_cmd_auth.py  test_cmd_billing.py  test_cmd_decompress.py  test_cmd_memory_index_db.py  test_cmd_memory_read.py  test_cmd_remember.py  test_cmd_search_compress.py  test_cmd_sync.py  test_cmd_token.py  test_cmd_vault_verify.py  test_completion.py  test_config.py  test_core_security.py  test_crypto.py  test_dependency_checker.py  test_dependency_installer.py  test_diagnostics_vector_backend.py  test_doctor.py  test_init_command.py  test_interpreter.py  test_interpreter_plugins.py  test_key_custody.py  test_launch_blockers.py  test_legacy_command_cleanup.py  test_local_api_memory.py  test_local_db.py  test_local_mode_isolation.py  test_local_pgvector_config.py  test_local_tokens.py  test_local_vectors_backend.py  (+16 more)
tests/commands/: test_command_inventory.py
tests/fixtures/: SOURCES.md
tests/integration/: conftest.py  test_adversarial_suite.py  test_compress_decompress.py  test_doctor_scenarios.py  test_integrity_corruption.py  test_integrity_tamper.py  test_json_contracts.py  test_local_happy_path.py  test_managed_sync.py  test_managed_sync_basic.py  test_mode_guards.py  test_rotate_keys.py  test_semantic_extraction.py  test_token_lifecycle.py  test_visual_verification.py  visual.py
tests/snapshots/: billing_status.json  list.json  remember.json  search.json  token_generate.json  whoami.json
(+512 files in other folders)
