[project]
name = "matriosha"
version = "2.0.0"
description = "Matriosha is a Python CLI for encrypted agent memory with verifiable integrity."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<0.13",
  "rich>=13.7,<14",
  "cryptography>=42,<43",
  "argon2-cffi>=23.1,<24",
  "pynacl>=1.5,<2",
  "requests>=2.32,<3",
  "httpx>=0.27,<0.28",
  "supabase>=2.5,<3",
  "pydantic>=2.7,<3",
  "numpy>=1.26,<2",
  "platformdirs>=4.2,<5",
]

[project.scripts]
matriosha = "cli.main:app"

[project.optional-dependencies]
cloud = [
  "google-cloud-secret-manager>=2.16.0",
]
embeddings = [
  "sentence-transformers>=3,<4",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "respx>=0.22,<0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
