[project]
name = "matriosha"
version = "2.0.1"
description = "Matriosha is a Python CLI for an encrypted, auditable AI context engine."
readme = "README_PYPI.md"
license = { file = "LICENSE" }
authors = [
  { name = "Daniele Vincenzo Rizzo" },
]
keywords = ["ai", "cli", "memory", "encryption", "auditability", "context-engine"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11,<3.15"
dependencies = [
  "typer>=0.20,<0.21",
  "rich>=13.7,<14",
  "click>=8.1,<8.2",
  "qrcode[pil]>=7.4.2,<8",
  "cryptography>=42,<43",
  "argon2-cffi>=23.1,<24",
  "keyring>=25,<26",
  "pynacl>=1.5,<2",
  "requests>=2.32,<3",
  "httpx>=0.27,<0.28",
  "certifi>=2023.7.22",
  "stripe>=8.0.0,<9.0.0",
  "supabase>=2.5,<3",
  "google-cloud-secret-manager>=2.16,<3",
  "jax>=0.4.20",
  "fastembed>=0.3,<1",
  "platformdirs>=4.2,<5",
  "portalocker>=2.8,<3",
  "tomli-w>=1.0,<2",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.7,<3",
  "pypdf>=4.2,<6",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "Pillow>=10.3,<12",
  "pytesseract>=0.3.10,<0.4",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.28,<1",
]


[project.urls]
Homepage = "https://matriosha.in"
Repository = "https://github.com/drizzoai-afk/matriosha"
Issues = "https://github.com/drizzoai-afk/matriosha/issues"

[project.scripts]
matriosha = "matriosha.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/matriosha"]

[tool.hatch.build.targets.sdist]
include = [
  "src/matriosha",
  "pyproject.toml",
  "requirements.txt",
  "README.md",
]

[project.optional-dependencies]
cloud = [
  "google-cloud-secret-manager>=2.16,<3",
]
cli-ux = [
  "google-cloud-secret-manager>=2.16,<3",
  "qrcode[pil]>=7.4.2,<8",
]
tui = [
  "textual>=0.70,<1",
  "pytailwindcss>=0.0.4,<1",
]
embeddings = [
  "sentence-transformers>=3,<4",
]
vector = [
  "lancedb>=0.30,<1",
  "pyarrow>=15.0.0,<17.0.0; python_version < \"3.14\"",
  "pyarrow>=16.0.0,<21.0.0; python_version >= \"3.14\"",
]
postgres = [
  "psycopg[binary]>=3.2,<4",
  "pgvector>=0.3,<1",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "respx>=0.22,<0.23",
  "syrupy>=4.8,<5",
  "pexpect>=4.9,<5",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7,<2",
  "pip-audit>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
markers = [
  "integration: e2e scenarios",
  "adversarial: break-things and resilience scenarios",
  "managed: scenarios requiring real managed backend credentials"
]


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["matriosha"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
